Fix to counter issue on wasabi.uk.com when the nav bar overlaps with the content

--- a/src/components/App/App.module.scss
+++ b/src/components/App/App.module.scss
@@ -2,4 +2,10 @@
 
 .root {
   @include app-style;
+
+  // wasabi.uk.com has an overlapping issue between the top nav bar and the content
+  // this is supposed to account for that
+  @media (min-width: 1025px) {
+    margin-top: 22px;
+  }
 }
